--- a/src/global.css
+++ b/src/global.css
@@ -65,7 +65,16 @@
     }
   }
 
-/* --> X <-- */
+  @keyframes backgroundAnim {
+    0% {
+      background-position: 0 0;
+    }
+    100% {
+      background-position: 100% 0;
+    }
+  }
+
+/* |-X-> Animations <-X-| */
 
 body {
   background-color: #DEDEDE !important;
@@ -147,14 +156,17 @@ body {
 
 /* -- Services Section -- */
 
-  #ServicesSection {
+  #ServicesSection,
+  #ProductSection {
     width: 100vw;
     height: auto;
-    margin-top: 16vh;
+    margin: 16vh 0;
   /*margin-bottom: 18vh; <--- REVISAR */ 
   }
 
-  #ServicesTitleImg {
+
+  #ServicesTitleImg, 
+  #ProductTitleImg {
     object-fit: cover;
     width: 100vw;
     height: 30vh;
@@ -162,31 +174,32 @@ body {
     z-index: 0;
   }
 
-  .h1X {
-    position: absolute;
-    left: 15%;
-    transform: translate(-50%, -50%);
+  .title-text-cont {
+    position: relative;
+    bottom: 20vh;
+    left: 5vw;
+    color: white;
     font-style: italic;
-    font-weight: 400;
-    color: White;
-    text-shadow: 2px 2px 3px black;
-    z-index: 1;
+    text-shadow: 0 0 5px black;
   }
 
-  .image-title {
-    top: 25%;
-  }
+    .image-title {
+      top: 25%;
+    }
 
-  .image-subtitle {
-    top: calc(25% + 8%);
-  }
+    .image-subtitle {
+      top: calc(25% + 8%);
+    }
+
+    .product-title {
+      top: 25%;
+    }
 
   .album-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 10vh 0 0 0;
   }
 
   .album-item {
@@ -240,33 +253,64 @@ body {
     align-items: center !important;
     justify-content: center ;
     width: fit-content; 
-    height: 50px; 
+    height: 70px; 
     margin-bottom: 10vh;
     margin-left: 40vw;
     padding: 15px;
-    background: linear-gradient(to bottom, #2150CA, #112b6d); 
+    background-color: #1940a1;
     color: white;
     outline: none;
     cursor: pointer;
     text-shadow: 2px 2px 3px black;
     box-shadow: inset -3px -3px 1px 2px #0a1d52;
     transform: skewX(-20deg); 
-    transition: box-shadow 0.2s ease-in-out, text-shadow 0.2s ease-in-out;
+    transition: 
+      box-shadow 0.2s ease-in-out, 
+      text-shadow 0.2s ease-in-out,
+      background-color 0.5s ease;
   }
 
     .cotizacionButton:hover {
-      box-shadow: inset 4px 4px 0px 0px #0a1d52;
+      box-shadow: inset 4px 4px 0px 0px #05102e;
       text-shadow: -1px -1px 2px black;
+      background-color: #0d235c;
     }
 
     .cotizacionAnchor {
       text-decoration: none;
-      font-size: 1.6em;
+      font-size: 1.8em;
       font-weight: 500;
       color: white;
     }
 
 /* --X-- Services Section --X-- */
+
+/* -- Products Section -- */
+
+  #custom-list a:nth-child(odd) {
+    background-color: white !important;
+  }
+
+  #custom-list a:nth-child(even) {
+    background-color: lightgray !important;
+  }
+
+/* --X-- Products Section --X-- */
+
+/* -- Contact Section -- */
+
+  #contact-backImage {
+    background-image: url('../src/assets/contact-backImage.png');
+    background-size: cover;
+    padding: 50px;
+  }
+
+  .transparent-background {
+    background: linear-gradient(to bottom, #DEDEDE, transparent);
+    border: none;
+  }
+
+/* --X-- Contact Section --X-- */
 
 /* -- Footer Section -- */
 
