--- a/src/global.css
+++ b/src/global.css
@@ -232,15 +232,13 @@ body {
     top: -50vh;
     transform: translate(2vw, 0); /* >> EjeX: 5vw / EjeY: 0vh << */
     width: 80%;
+    pointer-events: none;
     color: white;
     font-size: 1.8em;
     text-shadow: 0 0 5px black;
     z-index: 0;
   }
 
-  .image-text::after {
-    transition: 1s ease;
-  }
 
   #cotizacionText {
     display: flex;
